cursor: Only enable the OSK when touch is used

https://bugzilla.gnome.org/show_bug.cgi?id=692771